--- a/Carol-Curso/Web-App-MentoraSOW/package.json
+++ b/Carol-Curso/Web-App-MentoraSOW/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.22.0",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
     "html-to-image": "^1.11.13",
